--- a/architects.css
+++ b/architects.css
@@ -115,7 +115,6 @@ nav {
 .quick-list-content span {
     font-size: 2.8rem;
     font-weight: bold;
-
 }
 
 #quick-list {
@@ -126,22 +125,97 @@ nav {
     color: rgba(255, 144, 14, 1);
 }
 
+/* love features styles */
+
+.love-features {
+    display: flex;
+    justify-content: space-between;
+    /* border: 2px solid; */
+}
+
+.love-features-content {
+    max-width: 500px;
+    width: 100%;
+}
+
+.primary-card {
+    padding: 20px;
+    margin: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+}
+
+.primary-card .card-content h3 {
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.love-features-title {
+    font-size: 3rem;
+    font-weight: bold;
+    padding: 10px;
+    margin-top: 40px;
+    border-left: 5px solid #FF900E;
+}
+
+.love-features-image {
+    max-width: 650px;
+}
+.love-features-image img{
+    width: 100%;
+}
+
+.love-features-image button {
+    margin-left: -100px;
+    margin-top: -100px;
+    margin-bottom: 120px;
+    max-width: 280px;
+    max-height: 150px;
+    width: 100%;
+    height: 100%;
+}
+
+.love-features-image button h4 {
+    font-size: 3.5rem;
+    font-weight: bold;
+}
+
+.love-features-image button h5 {
+    font-size: 1rem;
+    font-weight: 500;
+}
 
 /* responsive media query */
+/* small screen  */
 @media screen and (max-width:576px) {
 
     nav,
     .header-list,
-     .quick-list{
+    .quick-list,
+    .love-features {
         flex-direction: column;
         gap: 20px;
 
     }
-    .quick-list-image{
-        grid-template-columns: repeat(1,1fr);
+    .header-title{
+        text-align: center;
     }
 
-    .quick-list-content{
+    .quick-list-image {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .quick-list-content {
         margin: 20px;
     }
+
+    .love-features-image button{
+        margin-top: 20px;
+        margin-left: 20px;
+    }
+}
+
+/* medium screen */
+@media screen and (min-width:576px) and (max-width:992) {
+
 }
