--- a/architects.css
+++ b/architects.css
@@ -29,6 +29,7 @@ body {
     border-radius: 8px;
     margin-top: 32px;
     font-weight: 600;
+    cursor: pointer;
 }
 
 .primary-bg-color {
@@ -161,7 +162,8 @@ nav {
 .love-features-image {
     max-width: 650px;
 }
-.love-features-image img{
+
+.love-features-image img {
     width: 100%;
 }
 
@@ -185,6 +187,66 @@ nav {
     font-weight: 500;
 }
 
+/* some facts section styles */
+.some-facts-card {
+    display: flex;
+    justify-content: space-around;
+    margin: 80px auto;
+
+}
+
+.some-facts-content {
+    max-width: 400px;
+    width: 100%;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.some-facts-card .secondary-card {
+    border: 2px solid #FF900E;
+    padding: 40px;
+    border-radius: 8px;
+    text-align: center;
+    max-width: 230px;
+    width: 100%;
+}
+
+.secondary-card h3 {
+    font-size: 2.5rem;
+    font-weight: 500;
+    margin-top: 5px;
+}
+
+/* sponsors section styles */
+.sponsors-content {
+    text-align: center;
+    max-width: 400px;
+    width: 100%;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.sponsors-content h1 {
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.sponsors-images {
+    display: flex;
+    justify-content: space-around;
+    margin: 40px 0;
+    filter: grayscale(100%);
+}
+
+/* footer section styles */
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 35px 0;
+    margin-top: 50px;
+}
+
 /* responsive media query */
 /* small screen  */
 @media screen and (max-width:576px) {
@@ -192,12 +254,15 @@ nav {
     nav,
     .header-list,
     .quick-list,
-    .love-features {
+    .love-features,
+    .some-facts-card,
+    .sponsors-images {
         flex-direction: column;
         gap: 20px;
 
     }
-    .header-title{
+
+    .header-title {
         text-align: center;
     }
 
@@ -209,13 +274,21 @@ nav {
         margin: 20px;
     }
 
-    .love-features-image button{
+    .love-features-image button {
         margin-top: 20px;
         margin-left: 20px;
+    }
+
+    .some-facts-card {
+        align-items: center;
+    }
+
+    .sponsors-images img{
+        max-width: 200px;
+        width: 100%;
+        margin: 10px auto;
     }
 }
 
 /* medium screen */
-@media screen and (min-width:576px) and (max-width:992) {
-
-}
+@media screen and (min-width:576px) and (max-width:992) {}
